parser/gen/com/github/bjansen/pebble/parser/PebbleParser.java
// Generated from /Users/bastien/IdeaProjects/pebble-intellij/parser/grammar/com/github/bjansen/pebble/parser/PebbleParser.g4 by ANTLR 4.6
package com.github.bjansen.pebble.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PebbleParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.6", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PRINT_OPEN=1, COMMENT=2, VERBATIM_TAG_OPEN=3, TAG_OPEN=4, CONTENT=5, VERBATIM_BODY=6, 
		VERBATIM_TAG_END=7, TAG_CLOSE=8, PRINT_CLOSE=9, NOT=10, NULL=11, NONE=12, 
		OP_ASSIGN=13, OP_TERNARY=14, OP_COLON=15, OP_PIPE=16, OP_CONCAT=17, OP_RANGE=18, 
		OP_MEMBER=19, LBRACE=20, RBRACE=21, LBRACKET=22, RBRACKET=23, LPAREN=24, 
		RPAREN=25, COMMA=26, OR=27, AND=28, IS=29, IN=30, CONTAINS=31, OP_PLUS=32, 
		OP_MINUS=33, OP_DIV=34, OP_MULT=35, OP_MOD=36, OP_EQ=37, EQUALS=38, OP_NEQ=39, 
		OP_LE=40, OP_LT=41, OP_GE=42, OP_GT=43, TRUE=44, FALSE=45, WITH=46, STRING=47, 
		SINGLE_QUOTED_STRING=48, NUMERIC=49, ID_NAME=50, WHITESPACE=51, ERRCHAR2=52;
	public static final int
		RULE_pebbleTemplate = 0, RULE_printDirective = 1, RULE_commentDirective = 2, 
		RULE_tagDirective = 3, RULE_verbatimTag = 4, RULE_genericTag = 5, RULE_tagName = 6, 
		RULE_expression = 7, RULE_parenthesized_expression = 8, RULE_array_expression = 9, 
		RULE_map_expression = 10, RULE_map_element = 11, RULE_member_expression = 12, 
		RULE_qualified_expression = 13, RULE_function_call_expression = 14, RULE_function_parameters = 15, 
		RULE_term = 16, RULE_test = 17, RULE_unary_op = 18, RULE_multiplicative_op = 19, 
		RULE_additive_op = 20, RULE_comparison_op = 21, RULE_boolean_literal = 22, 
		RULE_string_literal = 23, RULE_numeric_literal = 24, RULE_identifier = 25, 
		RULE_filters = 26;
	public static final String[] ruleNames = {
		"pebbleTemplate", "printDirective", "commentDirective", "tagDirective", 
		"verbatimTag", "genericTag", "tagName", "expression", "parenthesized_expression", 
		"array_expression", "map_expression", "map_element", "member_expression", 
		"qualified_expression", "function_call_expression", "function_parameters", 
		"term", "test", "unary_op", "multiplicative_op", "additive_op", "comparison_op", 
		"boolean_literal", "string_literal", "numeric_literal", "identifier", 
		"filters"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, null, null, null, null, null, null, null, null, "'not'", "'null'", 
		"'none'", "'='", "'?'", "':'", "'|'", "'~'", "'..'", "'.'", "'{'", "'}'", 
		"'['", "']'", "'('", "')'", "','", "'or'", "'and'", "'is'", "'in'", "'contains'", 
		"'+'", "'-'", "'/'", "'*'", "'%'", "'=='", "'equals'", "'!='", "'<='", 
		"'<'", "'>='", "'>'", "'true'", "'false'", "'with'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "PRINT_OPEN", "COMMENT", "VERBATIM_TAG_OPEN", "TAG_OPEN", "CONTENT", 
		"VERBATIM_BODY", "VERBATIM_TAG_END", "TAG_CLOSE", "PRINT_CLOSE", "NOT", 
		"NULL", "NONE", "OP_ASSIGN", "OP_TERNARY", "OP_COLON", "OP_PIPE", "OP_CONCAT", 
		"OP_RANGE", "OP_MEMBER", "LBRACE", "RBRACE", "LBRACKET", "RBRACKET", "LPAREN", 
		"RPAREN", "COMMA", "OR", "AND", "IS", "IN", "CONTAINS", "OP_PLUS", "OP_MINUS", 
		"OP_DIV", "OP_MULT", "OP_MOD", "OP_EQ", "EQUALS", "OP_NEQ", "OP_LE", "OP_LT", 
		"OP_GE", "OP_GT", "TRUE", "FALSE", "WITH", "STRING", "SINGLE_QUOTED_STRING", 
		"NUMERIC", "ID_NAME", "WHITESPACE", "ERRCHAR2"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PebbleParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PebbleParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class PebbleTemplateContext extends ParserRuleContext {
		public List<TerminalNode> CONTENT() { return getTokens(PebbleParser.CONTENT); }
		public TerminalNode CONTENT(int i) {
			return getToken(PebbleParser.CONTENT, i);
		}
		public List<PrintDirectiveContext> printDirective() {
			return getRuleContexts(PrintDirectiveContext.class);
		}
		public PrintDirectiveContext printDirective(int i) {
			return getRuleContext(PrintDirectiveContext.class,i);
		}
		public List<CommentDirectiveContext> commentDirective() {
			return getRuleContexts(CommentDirectiveContext.class);
		}
		public CommentDirectiveContext commentDirective(int i) {
			return getRuleContext(CommentDirectiveContext.class,i);
		}
		public List<TagDirectiveContext> tagDirective() {
			return getRuleContexts(TagDirectiveContext.class);
		}
		public TagDirectiveContext tagDirective(int i) {
			return getRuleContext(TagDirectiveContext.class,i);
		}
		public PebbleTemplateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pebbleTemplate; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PebbleParserVisitor ) return ((PebbleParserVisitor<? extends T>)visitor).visitPebbleTemplate(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PebbleTemplateContext pebbleTemplate() throws RecognitionException {
		PebbleTemplateContext _localctx = new PebbleTemplateContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_pebbleTemplate);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PRINT_OPEN) | (1L << COMMENT) | (1L << VERBATIM_TAG_OPEN) | (1L << TAG_OPEN) | (1L << CONTENT))) != 0)) {
				{
				setState(58);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case CONTENT:
					{
					setState(54);
					match(CONTENT);
					}
					break;
				case PRINT_OPEN:
					{
					setState(55);
					printDirective();
					}
					break;
				case COMMENT:
					{
					setState(56);
					commentDirective();
					}
					break;
				case VERBATIM_TAG_OPEN:
				case TAG_OPEN:
					{
					setState(57);
					tagDirective();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(62);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrintDirectiveContext extends ParserRuleContext {
		public TerminalNode PRINT_OPEN() { return getToken(PebbleParser.PRINT_OPEN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public FiltersContext filters() {
			return getRuleContext(FiltersContext.class,0);
		}
		public TerminalNode PRINT_CLOSE() { return getToken(PebbleParser.PRINT_CLOSE, 0); }
		public PrintDirectiveContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_printDirective; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PebbleParserVisitor ) return ((PebbleParserVisitor<? extends T>)visitor).visitPrintDirective(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PrintDirectiveContext printDirective() throws RecognitionException {
		PrintDirectiveContext _localctx = new PrintDirectiveContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_printDirective);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			match(PRINT_OPEN);
			setState(64);
			expression(0);
			setState(65);
			filters();
			setState(66);
			match(PRINT_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CommentDirectiveContext extends ParserRuleContext {
		public TerminalNode COMMENT() { return getToken(PebbleParser.COMMENT, 0); }
		public CommentDirectiveContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_commentDirective; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PebbleParserVisitor ) return ((PebbleParserVisitor<? extends T>)visitor).visitCommentDirective(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CommentDirectiveContext commentDirective() throws RecognitionException {
		CommentDirectiveContext _localctx = new CommentDirectiveContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_commentDirective);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			match(COMMENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TagDirectiveContext extends ParserRuleContext {
		public VerbatimTagContext verbatimTag() {
			return getRuleContext(VerbatimTagContext.class,0);
		}
		public GenericTagContext genericTag() {
			return getRuleContext(GenericTagContext.class,0);
		}
		public TagDirectiveContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tagDirective; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PebbleParserVisitor ) return ((PebbleParserVisitor<? extends T>)visitor).visitTagDirective(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TagDirectiveContext tagDirective() throws RecognitionException {
		TagDirectiveContext _localctx = new TagDirectiveContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_tagDirective);
		try {
			setState(72);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case VERBATIM_TAG_OPEN:
				enterOuterAlt(_localctx, 1);
				{
				setState(70);
				verbatimTag();
				}
				break;
			case TAG_OPEN:
				enterOuterAlt(_localctx, 2);
				{
				setState(71);
				genericTag();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VerbatimTagContext extends ParserRuleContext {
		public TerminalNode VERBATIM_TAG_OPEN() { return getToken(PebbleParser.VERBATIM_TAG_OPEN, 0); }
		public TerminalNode VERBATIM_BODY() { return getToken(PebbleParser.VERBATIM_BODY, 0); }
		public VerbatimTagContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_verbatimTag; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PebbleParserVisitor ) return ((PebbleParserVisitor<? extends T>)visitor).visitVerbatimTag(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VerbatimTagContext verbatimTag() throws RecognitionException {
		VerbatimTagContext _localctx = new VerbatimTagContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_verbatimTag);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			match(VERBATIM_TAG_OPEN);
			setState(75);
			match(VERBATIM_BODY);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GenericTagContext extends ParserRuleContext {
		public TerminalNode TAG_OPEN() { return getToken(PebbleParser.TAG_OPEN, 0); }
		public TagNameContext tagName() {
			return getRuleContext(TagNameContext.class,0);
		}
		public TerminalNode TAG_CLOSE() { return getToken(PebbleParser.TAG_CLOSE, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public GenericTagContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_genericTag; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PebbleParserVisitor ) return ((PebbleParserVisitor<? extends T>)visitor).visitGenericTag(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GenericTagContext genericTag() throws RecognitionException {
		GenericTagContext _localctx = new GenericTagContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_genericTag);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			match(TAG_OPEN);
			setState(78);
			tagName();
			setState(80);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NOT) | (1L << NULL) | (1L << NONE) | (1L << LBRACE) | (1L << LBRACKET) | (1L << LPAREN) | (1L << OP_PLUS) | (1L << OP_MINUS) | (1L << TRUE) | (1L << FALSE) | (1L << STRING) | (1L << SINGLE_QUOTED_STRING) | (1L << NUMERIC) | (1L << ID_NAME))) != 0)) {
				{
				setState(79);
				expression(0);
				}
			}

			setState(82);
			match(TAG_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TagNameContext extends ParserRuleContext {
		public TerminalNode ID_NAME() { return getToken(PebbleParser.ID_NAME, 0); }
		public TagNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tagName; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PebbleParserVisitor ) return ((PebbleParserVisitor<? extends T>)visitor).visitTagName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TagNameContext tagName() throws RecognitionException {
		TagNameContext _localctx = new TagNameContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_tagName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			match(ID_NAME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public Unary_opContext unary_op() {
			return getRuleContext(Unary_opContext.class,0);
		}
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public Parenthesized_expressionContext parenthesized_expression() {
			return getRuleContext(Parenthesized_expressionContext.class,0);
		}
		public Array_expressionContext array_expression() {
			return getRuleContext(Array_expressionContext.class,0);
		}
		public Map_expressionContext map_expression() {
			return getRuleContext(Map_expressionContext.class,0);
		}
		public Member_expressionContext member_expression() {
			return getRuleContext(Member_expressionContext.class,0);
		}
		public TerminalNode OP_ASSIGN() { return getToken(PebbleParser.OP_ASSIGN, 0); }
		public TerminalNode OR() { return getToken(PebbleParser.OR, 0); }
		public TerminalNode AND() { return getToken(PebbleParser.AND, 0); }
		public Comparison_opContext comparison_op() {
			return getRuleContext(Comparison_opContext.class,0);
		}
		public TerminalNode OP_TERNARY() { return getToken(PebbleParser.OP_TERNARY, 0); }
		public TerminalNode OP_COLON() { return getToken(PebbleParser.OP_COLON, 0); }
		public Additive_opContext additive_op() {
			return getRuleContext(Additive_opContext.class,0);
		}
		public Multiplicative_opContext multiplicative_op() {
			return getRuleContext(Multiplicative_opContext.class,0);
		}
		public TerminalNode OP_PIPE() { return getToken(PebbleParser.OP_PIPE, 0); }
		public TerminalNode OP_CONCAT() { return getToken(PebbleParser.OP_CONCAT, 0); }
		public TerminalNode OP_RANGE() { return getToken(PebbleParser.OP_RANGE, 0); }
		public TerminalNode IN() { return getToken(PebbleParser.IN, 0); }
		public TerminalNode WITH() { return getToken(PebbleParser.WITH, 0); }
		public TerminalNode IS() { return getToken(PebbleParser.IS, 0); }
		public TestContext test() {
			return getRuleContext(TestContext.class,0);
		}
		public TerminalNode CONTAINS() { return getToken(PebbleParser.CONTAINS, 0); }
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PebbleParserVisitor ) return ((PebbleParserVisitor<? extends T>)visitor).visitExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		return expression(0);
	}

	private ExpressionContext expression(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExpressionContext _localctx = new ExpressionContext(_ctx, _parentState);
		ExpressionContext _prevctx = _localctx;
		int _startState = 14;
		enterRecursionRule(_localctx, 14, RULE_expression, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NOT:
			case OP_PLUS:
			case OP_MINUS:
				{
				setState(87);
				unary_op();
				setState(88);
				expression(17);
				}
				break;
			case LPAREN:
				{
				setState(90);
				parenthesized_expression();
				}
				break;
			case LBRACKET:
				{
				setState(91);
				array_expression();
				}
				break;
			case LBRACE:
				{
				setState(92);
				map_expression();
				}
				break;
			case NULL:
			case NONE:
			case TRUE:
			case FALSE:
			case STRING:
			case SINGLE_QUOTED_STRING:
			case NUMERIC:
			case ID_NAME:
				{
				setState(93);
				member_expression();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(147);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(145);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
					case 1:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(96);
						if (!(precpred(_ctx, 18))) throw new FailedPredicateException(this, "precpred(_ctx, 18)");
						setState(97);
						match(OP_ASSIGN);
						setState(98);
						expression(19);
						}
						break;
					case 2:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(99);
						if (!(precpred(_ctx, 13))) throw new FailedPredicateException(this, "precpred(_ctx, 13)");
						setState(100);
						match(OR);
						setState(101);
						expression(14);
						}
						break;
					case 3:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(102);
						if (!(precpred(_ctx, 12))) throw new FailedPredicateException(this, "precpred(_ctx, 12)");
						setState(103);
						match(AND);
						setState(104);
						expression(13);
						}
						break;
					case 4:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(105);
						if (!(precpred(_ctx, 10))) throw new FailedPredicateException(this, "precpred(_ctx, 10)");
						setState(106);
						comparison_op();
						setState(107);
						expression(11);
						}
						break;
					case 5:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(109);
						if (!(precpred(_ctx, 9))) throw new FailedPredicateException(this, "precpred(_ctx, 9)");
						setState(110);
						match(OP_TERNARY);
						setState(111);
						expression(0);
						setState(112);
						match(OP_COLON);
						setState(113);
						expression(10);
						}
						break;
					case 6:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(115);
						if (!(precpred(_ctx, 8))) throw new FailedPredicateException(this, "precpred(_ctx, 8)");
						setState(116);
						additive_op();
						setState(117);
						expression(9);
						}
						break;
					case 7:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(119);
						if (!(precpred(_ctx, 7))) throw new FailedPredicateException(this, "precpred(_ctx, 7)");
						setState(120);
						multiplicative_op();
						setState(121);
						expression(8);
						}
						break;
					case 8:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(123);
						if (!(precpred(_ctx, 6))) throw new FailedPredicateException(this, "precpred(_ctx, 6)");
						setState(124);
						match(OP_PIPE);
						setState(125);
						expression(7);
						}
						break;
					case 9:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(126);
						if (!(precpred(_ctx, 5))) throw new FailedPredicateException(this, "precpred(_ctx, 5)");
						setState(127);
						match(OP_CONCAT);
						setState(128);
						expression(6);
						}
						break;
					case 10:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(129);
						if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
						setState(130);
						match(OP_RANGE);
						setState(131);
						expression(5);
						}
						break;
					case 11:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(132);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(133);
						match(IN);
						setState(134);
						expression(4);
						}
						break;
					case 12:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(135);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(136);
						match(WITH);
						setState(137);
						expression(3);
						}
						break;
					case 13:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(138);
						if (!(precpred(_ctx, 11))) throw new FailedPredicateException(this, "precpred(_ctx, 11)");
						setState(143);
						_errHandler.sync(this);
						switch (_input.LA(1)) {
						case IS:
							{
							{
							setState(139);
							match(IS);
							setState(140);
							test();
							}
							}
							break;
						case CONTAINS:
							{
							{
							setState(141);
							match(CONTAINS);
							setState(142);
							expression(0);
							}
							}
							break;
						default:
							throw new NoViableAltException(this);
						}
						}
						break;
					}
					} 
				}
				setState(149);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class Parenthesized_expressionContext extends ParserRuleContext {
		public TerminalNode LPAREN() { return getToken(PebbleParser.LPAREN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(PebbleParser.RPAREN, 0); }
		public Parenthesized_expressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parenthesized_expression; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PebbleParserVisitor ) return ((PebbleParserVisitor<? extends T>)visitor).visitParenthesized_expression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Parenthesized_expressionContext parenthesized_expression() throws RecognitionException {
		Parenthesized_expressionContext _localctx = new Parenthesized_expressionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_parenthesized_expression);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(150);
			match(LPAREN);
			setState(151);
			expression(0);
			setState(152);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Array_expressionContext extends ParserRuleContext {
		public TerminalNode LBRACKET() { return getToken(PebbleParser.LBRACKET, 0); }
		public TerminalNode RBRACKET() { return getToken(PebbleParser.RBRACKET, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public Array_expressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_array_expression; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PebbleParserVisitor ) return ((PebbleParserVisitor<? extends T>)visitor).visitArray_expression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Array_expressionContext array_expression() throws RecognitionException {
		Array_expressionContext _localctx = new Array_expressionContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_array_expression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(154);
			match(LBRACKET);
			setState(163);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NOT) | (1L << NULL) | (1L << NONE) | (1L << LBRACE) | (1L << LBRACKET) | (1L << LPAREN) | (1L << OP_PLUS) | (1L << OP_MINUS) | (1L << TRUE) | (1L << FALSE) | (1L << STRING) | (1L << SINGLE_QUOTED_STRING) | (1L << NUMERIC) | (1L << ID_NAME))) != 0)) {
				{
				setState(155);
				expression(0);
				setState(160);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(156);
					match(COMMA);
					setState(157);
					expression(0);
					}
					}
					setState(162);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(165);
			match(RBRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
